--- a/packages/default/scss/dropdowntree/_layout.scss
+++ b/packages/default/scss/dropdowntree/_layout.scss
@@ -4,7 +4,9 @@
     .k-dropdown-tree {}
 
     // Dropdowntree popup
-    .k-popup-dropdowntree {
+    .k-popup-dropdowntree, // remove legacy class once updated in components
+    .k-dropdowntree-popup,
+    .k-multiselecttree-popup {
         padding: 0;
 
         .k-check-all {
