fix(breadcrumb): adjust styles for the updated rendering

--- a/packages/fluent/scss/breadcrumb/_layout.scss
+++ b/packages/fluent/scss/breadcrumb/_layout.scss
@@ -51,6 +51,7 @@
         vertical-align: middle;
         display: inline-flex;
         flex-direction: row;
+        flex: none;
         align-items: center;
         overflow: hidden;
     }
