--- a/packages/nouvelle/scss/breadcrumb/_layout.scss
+++ b/packages/nouvelle/scss/breadcrumb/_layout.scss
@@ -48,6 +48,7 @@
         vertical-align: middle;
         display: inline-flex;
         flex-direction: row;
+        flex: none;
         align-items: center;
         overflow: hidden;
     }
