--- a/packages/fluent/scss/grid/_theme.scss
+++ b/packages/fluent/scss/grid/_theme.scss
@@ -276,6 +276,15 @@
         }
     }
 
+    // Selection Aggregates
+    .k-selection-aggregates {
+        @include fill(
+            var( --kendo-grid-selection-aggregates-text, #{$kendo-grid-selection-aggregates-text} ),
+            var( --kendo-grid-selection-aggregates-bg, #{$kendo-grid-selection-aggregates-bg} ),
+            var( --kendo-grid-selection-aggregates-border, #{$kendo-grid-selection-aggregates-border} )
+        );
+    }
+
     // Content
     .k-master-row {
         .k-grid-content-sticky {
