--- a/packages/bootstrap/scss/grid/_theme.scss
+++ b/packages/bootstrap/scss/grid/_theme.scss
@@ -175,6 +175,15 @@
         }
     }
 
+    // Selection Aggregates
+    .k-selection-aggregates {
+        @include fill(
+            $kendo-grid-selection-aggregates-text,
+            $kendo-grid-selection-aggregates-bg,
+            $kendo-grid-selection-aggregates-border
+        );
+    }
+
 
     // Content
     .k-master-row {
