--- a/packages/fluent/scss/grid/index.scss
+++ b/packages/fluent/scss/grid/index.scss
@@ -17,6 +17,7 @@ $_kendo-module-meta: (
         "progressbar",
         "validator",
         "table",
+        "tabstrip",
         "list",
         "menu",
         "dialog",
