--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1244,6 +1244,27 @@
             }
         }
     }
+    .k-column-menu-tabbed {
+        border-radius: $kendo-tabstrip-item-border-radius $kendo-tabstrip-item-border-radius 0 0;
+
+        .k-tabstrip-items {
+            margin: (-$kendo-tabstrip-item-border-width) (-$kendo-tabstrip-item-border-width) 0;
+
+            .k-item {
+                flex: 1;
+            }
+
+            .k-link {
+                justify-content: center;
+            }
+        }
+
+        .k-tabstrip-content {
+            padding-inline: $kendo-grid-column-menu-tabbed-tabstrip-content-padding-x;
+            padding-block: $kendo-grid-column-menu-tabbed-tabstrip-content-padding-y;
+            border-width: 0;
+        }
+    }
 
     .k-column-list {
         padding: 0;
