--- a/packages/material/scss/grid/_variables.scss
+++ b/packages/material/scss/grid/_variables.scss
@@ -290,6 +290,11 @@ $kendo-grid-column-menu-group-header-bg: null !default;
 $kendo-grid-column-menu-group-header-text: $kendo-popup-text !default;
 $kendo-grid-column-menu-group-header-border: $kendo-popup-border !default;
 
+$kendo-grid-column-menu-tabbed-tabstrip-content-padding-x: 0 !default;
+$kendo-grid-column-menu-tabbed-tabstrip-content-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+
+$kendo-grid-column-menu-tabbed-bg: $kendo-base-bg !default;
+
 $kendo-grid-drag-cell-width: ($kendo-icon-size * 3) !default;
 
 $kendo-grid-row-inner-height: calc( #{$kendo-line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
