--- a/packages/default/scss/grid/_theme.scss
+++ b/packages/default/scss/grid/_theme.scss
@@ -489,12 +489,16 @@
     }
 
     // Row resizing
-    .k-row-resizer {
-        @include fill( $bg: $kendo-grid-row-resizer-bg );
+    .k-resizer-wrap {
 
-        &.k-active {
+        &.k-hover .k-row-resizer {
+            @include fill( $bg: $kendo-grid-row-resizer-hover-bg );
+        }
+
+        &.k-active .k-row-resizer {
             @include fill( $bg: $kendo-grid-row-resizer-active-bg );
         }
+
     }
 
 }
