--- a/packages/fluent/scss/grid/_theme.scss
+++ b/packages/fluent/scss/grid/_theme.scss
@@ -538,16 +538,16 @@
         border-color: $kendo-grid-border;
     }
 
-    .k-row-resizer {
-        @include fill (
-            $bg: var( --kendo-grid-row-resizer-bg, #{$kendo-grid-row-resizer-bg} ),
-         );
+    .k-resizer-wrap {
 
-        &.k-active {
-            @include fill (
-                $bg: var( --kendo-grid-row-resizer-active-bg, #{$kendo-grid-row-resizer-active-bg} ),
-             );
+        &.k-hover .k-row-resizer {
+            @include fill( $bg: var( --kendo-grid-row-resizer-hover-bg, #{$kendo-grid-row-resizer-hover-bg} ) );
         }
+
+        &.k-active .k-row-resizer {
+            @include fill( $bg: var( --kendo-grid-row-resizer-active-bg, #{$kendo-grid-row-resizer-active-bg} ) );
+        }
+
     }
 
 }
