--- a/packages/default/scss/fab/_theme.scss
+++ b/packages/default/scss/fab/_theme.scss
@@ -117,7 +117,7 @@
     }
 
     // Popup
-    .k-animation-container > .k-fab-popup {
+    .k-fab-popup {
         @include box-shadow( none );
     }
 
