--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -57,13 +57,16 @@ $ki-icon-size: $kendo-icon-size;
     }
 
     // RTL icons
-    .k-rtl .k-i-indent-increase,
-    .k-rtl .k-i-indent-decrease,
-    .k-rtl .k-i-caret-alt-right,
-    .k-rtl .k-i-caret-alt-left,
-    [dir="rtl"] .k-i-caret-alt-right,
-    [dir="rtl"] .k-i-caret-alt-left {
-        transform: scaleX(-1);
+    .k-rtl,
+    [dir="rtl"] {
+        .k-i-indent-increase,
+        .k-i-indent-decrease,
+        .k-i-caret-alt-right,
+        .k-i-caret-alt-left,
+        .k-svg-i-caret-alt-right,
+        .k-svg-i-caret-alt-left {
+            transform: scaleX(-1);
+        }
     }
 
     .k-sprite {
