--- a/packages/default/scss/pager/_layout.scss
+++ b/packages/default/scss/pager/_layout.scss
@@ -28,18 +28,7 @@
         .k-rtl &,
         &[dir="rtl"],
         [dir="rtl"] & {
-            .k-i-caret-alt-to-left,
-            .k-i-caret-alt-to-right,
-            .k-i-caret-alt-left,
-            .k-i-caret-alt-right,
-            .k-i-arrow-end-left,
-            .k-i-arrow-60-left,
-            .k-i-arrow-60-right,
-            .k-i-arrow-end-right,
-            .k-i-seek-w,
-            .k-i-arrow-w,
-            .k-i-arrow-e,
-            .k-i-seek-e {
+            .k-pager-nav .k-button-icon {
                 transform: scaleX(-1);
             }
         }
