--- a/packages/default/scss/drawer/_variables.scss
+++ b/packages/default/scss/drawer/_variables.scss
@@ -24,6 +24,8 @@ $kendo-drawer-item-level-padding-x: $kendo-drawer-item-padding-x !default;
 $kendo-drawer-item-level-count: 5 !default;
 
 $kendo-drawer-icon-size: $kendo-icon-size !default;
+$kendo-drawer-icon-padding-x: 0 !default;
+$kendo-drawer-icon-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
 
 $kendo-drawer-mini-initial-width: calc(2 * #{$kendo-drawer-item-padding-x} + #{$kendo-drawer-icon-size}) !default;
 
