--- a/packages/fluent/scss/input/_layout.scss
+++ b/packages/fluent/scss/input/_layout.scss
@@ -226,14 +226,15 @@
     .k-input-prefix > .k-svg-icon,
     .k-input-suffix > .k-icon,
     .k-input-suffix > .k-svg-icon {
-        width: var( --INTERNAL--kendo-input-icon-size, min-content );
-        height: var( --INTERNAL--kendo-input-icon-size, min-content );
+        padding-inline: var( --INTERNAL--kendo-input-padding-y, #{$kendo-input-md-padding-y} );
+        padding-block: var( --INTERNAL--kendo-input-padding-y, #{$kendo-input-md-padding-y} );
         flex: none;
         align-self: center;
         display: inline-flex;
         flex-flow: row nowrap;
         align-items: center;
         justify-content: center;
+        box-sizing: content-box;
     }
 
     // Input with SVG icon
