--- a/packages/material/scss/fab/_theme.scss
+++ b/packages/material/scss/fab/_theme.scss
@@ -110,7 +110,7 @@
     }
 
     // Popup
-    .k-animation-container > .k-fab-popup {
+    .k-fab-popup {
         @include box-shadow( none );
     }
 
